Import of JJNAPIORK/Catalyst-Runtime-5.90079_003.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.90079_003
gitpan-cpan-path:         JJNAPIORK/Catalyst-Runtime-5.90079_003.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90079_003 - 2014-12-03
+  - Make sure all tests run even if debug mode is enabled.
+  - Fixed issue with middleware stash test case that failed on older Perls
+
 5.90079_002 - 2014-12-02
   - Fixed typo in Makefile.PL which borked the previous distribution. No other
     changes.
