Import of JJNAPIORK/Catalyst-Runtime-5.90079_008.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.90079_008
gitpan-cpan-path:         JJNAPIORK/Catalyst-Runtime-5.90079_008.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     developer

--- a/lib/Catalyst/Delta.pod
+++ b/lib/Catalyst/Delta.pod
@@ -19,6 +19,8 @@ If this change causes you trouble, you can disable it:
 
     __PACKAGE__->config(encoding=>undef);
 
+For further information, please see L<Catalyst::UTF8>
+
 But please report bugs.  You will find that a number of common Views have been
 updated for this release (such as L<Catalyst::View::TT>).  In all cases that the
 author is aware of these updates were to fix test cases only.  You shouldn't
