--- a/Changes
+++ b/Changes
@@ -1,16 +1,24 @@
 # This file documents the revision history for Perl extension Catalyst.
 
-5.90082 - 2014-01-10
+5.90083 - 2014-02-16
+  - Fixed typo in support for OPTIONS method matching (andre++)
+  - Stop using $env->{'plack.request.query'} as a query paring optimization
+    since 1) it doesn't belong to us and 2) there's subtle differences in the
+    way plack parses parameters and catalyst does.  This fixes a bug when you
+    are using middleware that uses Plack::Request to do its thing.  This change
+    might have subtle impact on query parsing.  Please test this change!
+
+5.90082 - 2015-01-10
   - Fixed a regression created in $response->from_psgi_response and test case
     to prevent it happening again.
 
-5.90081 - 2014-01-10
+5.90081 - 2015-01-10
   - created class attribute 'finalized_default_middleware' which determines
     if the default middleware has been added to the stack yet or not.  This
     removes a horrible hack that polluted the configuration hash.  Added
     test case to prevent regressions.
 
-5.90080 - 2014-01-09
+5.90080 - 2015-01-09
   - Minor documentation corrections
   - Make the '79 development series stable
 
