--- a/Changes
+++ b/Changes
@@ -1,8 +1,23 @@
 # This file documents the revision history for Perl extension Catalyst.
 
-5.90083 - 2014-02-16
+5.90084 - 2015-02-23
+  - Small change to the way body parameters are created in order to prevent
+    trying to create parameters twice.
+  - Use new HTTP::Body and code updates to fix issue when POSTed params have
+    non UTF-8 charset encodings or otherwise complex upload parts that are not
+    file uploads. In these cases when Catalyst can't determine what the value of
+    a form upload is, will return an instance of Catalyst::Request::PartData will
+    all the information need to figure it out.  Documentation about this corner
+    case. For RT https://rt.cpan.org/Ticket/Display.html?id=101556
+  - Two new application configuration parameters 'skip_body_param_unicode_decoding'
+    and 'skip_complex_post_part_handling' to assist you with any backward
+    compatibility issues with all the new UTF8 work in the most recent stable
+    Catalyst.  You may use these settings to TEMPORARILY disable certain new
+    features while you are seeking a long term fix.
+
+5.90083 - 2015-02-16
   - Fixed typo in support for OPTIONS method matching (andre++)
-  - Stop using $env->{'plack.request.query'} as a query paring optimization
+  - Stop using $env->{'plack.request.query'} as a query parsing optimization
     since 1) it doesn't belong to us and 2) there's subtle differences in the
     way plack parses parameters and catalyst does.  This fixes a bug when you
     are using middleware that uses Plack::Request to do its thing.  This change
