--- a/Changes
+++ b/Changes
@@ -1,12 +1,26 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90085 - 2015-03-25
+  - Small change to Catalyst::Action to prevent autovivication of Args value (dim1++)
+  - Minor typo fixes (Abraxxa++)
+  - Make sure than when using chained actions and when more than one action
+    matches the same path specification AND has Args(0), that we follow the
+    "in a tie, the last action defined wins" rule.  There is a small chance
+    this is a breaking change for you.  See Catalyst::Upgrading for more.
+    You may use the application configuration setting "use_chained_args_0_special_case"
+    to disable this new behavior, if you must for back-compat reasons.
+  - Added PATCH HTTP Method action attribute shortcut.
+  - Several new configuration options aimed to give improved backwards compatibility
+    for when your URL query parameters or keywords have non UTF-8 encodings.
+    See Catalyst::Upgrading.
+
 5.90084 - 2015-02-23
   - Small change to the way body parameters are created in order to prevent
     trying to create parameters twice.
   - Use new HTTP::Body and code updates to fix issue when POSTed params have
     non UTF-8 charset encodings or otherwise complex upload parts that are not
     file uploads. In these cases when Catalyst can't determine what the value of
-    a form upload is, will return an instance of Catalyst::Request::PartData will
+    a form upload is, will return an instance of Catalyst::Request::PartData with
     all the information need to figure it out.  Documentation about this corner
     case. For RT https://rt.cpan.org/Ticket/Display.html?id=101556
   - Two new application configuration parameters 'skip_body_param_unicode_decoding'
