Import of JJNAPIORK/Catalyst-Runtime-5.90091.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.90091
gitpan-cpan-path:         JJNAPIORK/Catalyst-Runtime-5.90091.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90091 - 2014-05-08
+  - Fixed a bug where if an injected component expanded sub components, those
+    sub components would not show up in the startup debug dev console (
+    even though they were actually created).
+
 5.90090 - 2014-04-29
   - Updated some documention in Catalyst::Request::Upload to clarify behavior
     that RT ticket reported as confusing or unexpected
