--- a/Changes
+++ b/Changes
@@ -1,11 +1,19 @@
 # This file documents the revision history for Perl extension Catalyst.
 
-5.90091 - 2014-05-08
+5.90092 - 2015-05-19
+  - Allows you to use a namespace suffix for request, response and stats
+    class traits.  Docs and tests for this.
+  - Refactor the change introduced in 5.90091 to solve reported issues (for
+    example Catalyst::Controller::DBIC::API fails its tests) and to be a more
+    conservative refactor (new code more closely resembles the orginal code
+    that has proven to work for years.)
+
+5.90091 - 2015-05-08
   - Fixed a bug where if an injected component expanded sub components, those
     sub components would not show up in the startup debug dev console (
     even though they were actually created).
 
-5.90090 - 2014-04-29
+5.90090 - 2015-04-29
   - Updated some documention in Catalyst::Request::Upload to clarify behavior
     that RT ticket reported as confusing or unexpected
   - Merged all changes from 5.90089_XXX development cycle.
